# bookcast

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 31177c295ff5_initial_schema.py
bookcast/: audio.py  config.py  cover.py  db.py  deps.py  main.py  models.py  queue.py  rss.py  tasks.py  worker.py
bookcast/parsers/: __init__.py  _text.py  epub.py  fb2.py  txt.py
bookcast/routes/: book.py  feed.py  library.py  preview.py  upload.py
bookcast/tts/: base.py  kokoro.py  router.py  silero.py
static/: styles.css
templates/: _book_progress.html  base.html  book.html  library.html  upload.html
